--- a/Automation/html/div.css
+++ b/Automation/html/div.css
@@ -174,6 +174,14 @@ td.reportnote
   text-align:right;
 }
 
+td.allstar
+{
+  font-style:italic;
+  font-size:85%;
+  text-align:right;
+}
+
+
 td.reportbold
 {
   font-weight:bold;
@@ -197,6 +205,19 @@ td.eventhead
   padding-left:1em;
   padding-right:1em;
   text-align:left;
+}
+
+td.eventcolhead
+{
+  font-weight:normal;
+  background:#ccccff;
+  outline-style:solid;
+  outline-width:1px;
+  padding-left:1em;
+  padding-right:1em;
+  border-right-style:none;
+  border-left-style:none;
+  text-align:center;
 }
 
 div.relayswimmers
